# GBA-emu

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  TEST.gba
src/: CMakeLists.txt  common.h  cpu.cpp  cpu.h  emulator.cpp  emulator.h  instruction_types.cpp  instruction_types.h  instruction_types_arguments.h  main.cpp  memory.cpp  memory.h  opcode.h  shift_types.h
src/tests/: CMakeLists.txt  test_data_processing.cpp  test_software_interrupt.cpp
